<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="swipe_left">Nothing yet</string>
    <string name="label_all_bills">All bills</string>
    <string name="action_create_bill">New bill</string>
    <string name="action_settings">App settings</string>
    <string name="action_projects">Projects</string>
    <string name="action_scan_qrcode">Scan QRCode from Cospend/MoneyBuster</string>
    <string name="action_add_project">Add project</string>
    <string name="action_save_bill">Save bill</string>
    <string name="action_edit_project">Edit project</string>
    <string name="action_manage_project">Manage project</string>
    <string name="action_share_project">Share project</string>
    <string name="mandatory">(mandatory)</string>
    <string name="setting_what">What?</string>
    <string name="setting_what_long">Paid for what?</string>
    <string name="setting_date">When was it?</string>
    <string name="setting_time">What time was it?</string>
    <string name="setting_date_long">The day it was paid</string>
    <string name="setting_payer">Who paid?</string>
    <string name="setting_all">All</string>
    <string name="setting_none">None</string>
    <string name="save_or_discard_bill_dialog_title">Bill edition</string>
    <string name="save_or_discard_bill_dialog_message">Bill values have been changed. What do you want to do?</string>
    <string name="save_or_discard_bill_dialog_save">Save</string>
    <string name="save_or_discard_bill_dialog_discard">Discard</string>
    <string name="currency_manager">Currency manager</string>
    <string name="add_currency_title">Add currency</string>
    <string name="currency_management_unavailable">Currency management is only available for Cospend projects</string>
    <string name="setting_comment">Comment</string>
    <string name="duplicate_bill">Duplicate bill</string>
    <string name="currency_dialog_title">Convert current amount from another currency into %s</string>
    <string name="no_currency_error">There is no additional currency</string>
    <string name="main_currency">Main currency</string>
    <string name="no_main_currency">Main currency must be set before adding others</string>
    <string name="currency_edit_name">Name</string>
    <string name="currency_rate">Exchange rate</string>
    <string name="bill_deletion_is_disabled">Bill deletion is disabled for this project</string>
    <string name="setting_amount">How much?</string>
    <string name="setting_amount_long">How much did it cost?</string>
    <string name="setting_owers">For whom?</string>
    <string name="setting_project_id">Project ID/name</string>
    <string name="setting_project_type">Project type</string>
    <string name="setting_project_repetition">Repeat this bill every</string>
    <string name="setting_payment_mode">Payment mode</string>
    <string name="setting_category">Category</string>
    <string name="empty_action_dialog_title">What do you want to do?</string>
    <string name="configure_account_choice">Configure Nextcloud account</string>
    <string name="add_project_choice">Manually add a project (IHateMoney, Cospend or local)</string>
    <string name="repeat_no">do not repeat</string>
    <string name="repeat_day">day</string>
    <string name="repeat_week">week</string>
    <string name="repeat_month">month</string>
    <string name="repeat_year">year</string>
    <string name="payment_mode_none">No payment mode</string>
    <string name="payment_mode_all">All payment modes</string>
    <string name="payment_mode_credit_card">Credit card</string>
    <string name="payment_mode_cash">Cash</string>
    <string name="payment_mode_check">Check</string>
    <string name="payment_mode_online">Online service</string>
    <string name="payment_mode_transfer">Transfer</string>
    <string name="category_none">No category</string>
    <string name="category_all">All categories</string>
    <string name="category_all_except_reimbursement">All except reimbursement</string>
    <string name="category_groceries">Grocery</string>
    <string name="category_leisure">Bar/Party</string>
    <string name="category_rent">Rent</string>
    <string name="category_bills">Bill</string>
    <string name="category_excursion">Excursion/Culture</string>
    <string name="category_health">Health</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_reimbursement">Reimbursement</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_accomodation">Accommodation</string>
    <string name="category_transport">Transport</string>
    <string name="category_sport">Sport</string>
    <string name="project_type_local">Local project</string>
    <string name="project_type_ihatemoney">IHateMoney project</string>
    <string name="project_type_nextcloud_cospend">Nextcloud Cospend project</string>
    <string name="new_project_what_todo">What do you want to do?</string>
    <string name="new_project_where">Where?</string>
    <string name="where_local">Just my phone (local)</string>
    <string name="where_ihm">IHateMoney server</string>
    <string name="where_cospend">Cospend Nextcloud app</string>
    <string name="where_local_short">Local</string>
    <string name="where_ihm_short">IHateMoney</string>
    <string name="where_cospend_short">Cospend</string>
    <string name="new_project_scan">Scan a MoneyBuster QRCode</string>
    <string name="todo_join">Join an existing project</string>
    <string name="todo_join_label">Join</string>
    <string name="todo_create_label">Create</string>
    <string name="todo_create">Create a project</string>
    <string name="setting_ihm_project_url_long">Address of IHateMoney instance hosting the project (or full invitation link)</string>
    <string name="setting_ihm_project_url">IHateMoney address (or invitation link)</string>
    <string name="setting_cospend_project_url_long">Address of Nextcloud instance hosting the Cospend project</string>
    <string name="setting_cospend_project_url">Nextcloud Cospend address</string>
    <string name="setting_project_name">Project title (remote)</string>
    <string name="setting_project_name_long">Displayed in user interface</string>
    <string name="setting_password_long">Password you use to connect to the project</string>
    <string name="setting_password">Password (local)</string>
    <string name="setting_new_project_password">Password</string>
    <string name="setting_new_project_name">Project title</string>
    <string name="setting_new_project_email">E-mail</string>
    <string name="warning_auth_project_creation">Warning: creating a Cospend project using Nextcloud account works with Cospend v0.3.4 and higher.</string>
    <string name="auth_project_creation_title">Authenticated project creation</string>
    <string name="project_edition_no_change">Nothing was changed</string>
    <string name="setting_new_password_long">Change the remote project password (tell other project users)</string>
    <string name="setting_new_password">New password (remote)</string>
    <string name="setting_create_project_title">Create project on the server</string>
    <string name="setting_create_project_summary">Works only if anonymous project creation is allowed on the instance</string>
    <string name="setting_email_long">Contact e-mail</string>
    <string name="setting_email">E-mail (remote)</string>
    <string name="project_added_success">Project successfully added to MoneyBuster</string>
    <string name="action_search">Search</string>
    <string name="action_search_in_project">Search in %s</string>
    <string name="simple_error">Error</string>
    <string name="simple_close">Close</string>
    <string name="simple_loading">Loading</string>
    <string name="simple_remove">Remove</string>
    <string name="sync_error_dialog_title">Project sync failed</string>
    <string name="sync_error_dialog_full_content">Synchronization with project %1$s failed. Error message:\n\n%2$s\n\nThe associated remote project might not exist anymore. If so, you could remove this project from MoneyBuster.</string>
    <string name="error_maintenance_mode">The Nextcloud instance is probably in maintenance mode</string>
    <string name="error_400">400 Bad request</string>
    <string name="error_401">401 Unauthorized</string>
    <string name="error_403">403 Forbidden</string>
    <string name="error_404">404 Not Found</string>
    <string name="simple_do_nothing">Do nothing</string>
    <string name="creating_remote_project">Creating remote project</string>
    <string name="simple_cancel">Cancel</string>
    <string name="simple_ok">Ok</string>
    <string name="simple_ok_no_more">Got it!</string>
    <string name="simple_yes">Yes</string>
    <string name="simple_no">No</string>
    <string name="simple_add">Add</string>
    <string name="simple_edit_bill">Edit bill</string>
    <string name="simple_new_bill">New bill</string>
    <string name="simple_add_project">Add project in MoneyBuster</string>
    <string name="simple_edit_project">Edit project</string>
    <string name="simple_about">About</string>
    <string name="share_impossible">Impossible to share this project</string>
    <string name="simple_settle_share">Share settlement</string>
    <string name="simple_create_bills">Create bills</string>
    <string name="settle_bill_what">Settlement bill</string>
    <string name="simple_stats_share">Share statistics</string>
    <string name="simple_share_share">Share MoneyBuster link</string>
    <string name="action_bill_deleted">Bill deleted</string>
    <string name="action_bill_restored">Bill restored</string>
    <string name="action_undo">Undo</string>
    <string name="action_drawer_open">open side menu</string>
    <string name="action_drawer_close">close side menu</string>
    <string name="action_select_project">select current project</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_scan">Scan Austrian tax QRCode</string>
    <string name="menu_delete_project_remote">Delete project on server</string>
    <string name="menu_save_project">Save project</string>
    <string name="menu_save_bill">Save bill</string>
    <string name="fab_add_project">Add a project</string>
    <string name="fab_add_member">Add a member</string>
    <string name="fab_rm_project">Remove current Project</string>
    <string name="remove_project_confirmation">Project %1$s has been removed</string>
    <string name="fab_edit_member">Edit a member</string>
    <string name="choose_member_management_action">Manage members</string>
    <string name="choose_project_management_action">Manage project</string>
    <string name="fab_manage_members">Manage members</string>
    <string name="fab_export_project">Export project</string>
    <string name="drawer_last_sync_text">Last sync: %1$02d:%2$02d</string>
    <string name="scan_qrcode_tooltip">Scan a Cospend/IHateMoney QRCode</string>
    <string name="new_project_from_nextcloud_tooltip">Choose project from Nextcloud account</string>
    <string name="settle_who">Who pays?</string>
    <string name="settle_to_whom">To whom?</string>
    <string name="settle_how_much">How much?</string>
    <string name="stats_who">Who</string>
    <string name="stats_paid">Paid</string>
    <string name="stats_spent">Spent</string>
    <string name="stats_balance">Balance</string>
    <string name="share_project_dialog_message">Scan this QRCode with MoneyBuster or a scanner app on an Android device where MoneyBuster is installed. You can also simply send/share the MoneyBuster link above.</string>
    <string name="share_project_public_url_dialog_message">Share this web link to let others access the project with a web browser.</string>
    <string name="share_project_public_url_title">Web link</string>
    <string name="share_project_public_qrcode_title">MoneyBuster link</string>
</resources>