<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="project_preferences">

    <EditTextPreference
        android:id="@+id/editProjectName"
        android:icon="@drawable/ic_title_grey_24dp"
        android:dialogMessage="@string/setting_project_name_long"
        android:dialogTitle="@string/setting_project_name"
        android:key="name"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:persistent="false"
        android:summary=""
        android:title="@string/setting_project_name" />

    <EditTextPreference
        android:id="@+id/editProjectPassword"
        android:icon="@android:drawable/ic_lock_lock"
        android:dialogMessage="@string/setting_password_long"
        android:dialogTitle="@string/setting_password"
        android:key="password"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:persistent="false"
        android:summary=""
        android:inputType="textPassword"
        android:title="@string/setting_password" />

    <EditTextPreference
        android:id="@+id/editProjectEmail"
        android:icon="@android:drawable/sym_action_email"
        android:dialogMessage="@string/setting_email_long"
        android:dialogTitle="@string/setting_email"
        android:key="email"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:persistent="false"
        android:summary=""
        android:title="@string/setting_email" />

</PreferenceScreen>