<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_cancel"
        android:icon="@drawable/ic_clear_white_24dp"
        android:orderInCategory="110"
        android:title="@string/simple_cancel"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:orderInCategory="110"
        android:title="@string/menu_save_bill"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="89"
        android:title="@string/menu_delete"
        app:showAsAction="never" />

</menu>