<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/dummydivider"
        android:showDividers="middle"
        android:dividerPadding="22dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
        android:id="@+id/totalPayedLayout"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/totalPayedIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_dollar_grey_24dp"
            />

        <TextView
            android:id="@+id/totalPayedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/statTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/header_who"
                android:layout_width="0dp"
                android:text="@string/stats_who" />

            <TextView
                android:id="@+id/header_paid"
                android:layout_width="0dp"
                android:gravity="end"
                android:text="@string/stats_paid" />

            <TextView
                android:id="@+id/header_spent"
                android:layout_width="0dp"
                android:gravity="end"
                android:text="@string/stats_spent" />

            <TextView
                android:id="@+id/header_balance"
                android:layout_width="0dp"
                android:gravity="end"
                android:text="@string/stats_balance" />
        </TableRow>
    </TableLayout>

    </LinearLayout>
</ScrollView>