<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:showDividers="middle"
    android:dividerPadding="22dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewShareProjectPublicUrlTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/share_project_public_url_title" />


    <TextView
        android:id="@+id/textViewShareProjectPublicUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="" />
    <TextView
        android:id="@+id/textViewShareProjectPublicUrlHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_project_public_url_dialog_message" />

    <ImageView
        android:src="@drawable/dummydivider"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textViewShareProjectQRCodeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/share_project_public_qrcode_title" />

    <ImageView
        android:id="@+id/imageViewShareProject"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/textViewShareProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textIsSelectable="true"
        android:text="" />
    <TextView
        android:id="@+id/textViewShareProjectHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_project_dialog_message" />




</LinearLayout>
</ScrollView>