<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">
    <LinearLayout
        android:id="@+id/memberCenterLayout"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/memberCenterIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_center_focus_strong_grey_24dp"
            />

        <Spinner
            android:id="@+id/memberCenterSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight=".60"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/settleTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header_who"
                android:layout_width="0dp"
                android:text="@string/settle_who" />

            <TextView
                android:id="@+id/header_towhom"
                android:layout_width="0dp"
                android:text="@string/settle_to_whom" />

            <TextView
                android:id="@+id/header_howmuch"
                android:layout_width="0dp"
                android:gravity="end"
                android:text="@string/settle_how_much" />
        </TableRow>
    </TableLayout>

    </LinearLayout>
</ScrollView>
